# fit-sync

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  biome.json  package.json  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  lib.rs  main.rs
src/lib/components/icons/: GarminIcon.svelte
src/lib/components/sync/: ConnectionIcon.svelte  SyncCard.svelte  sync.types.ts
src/lib/components/ui/select/: select-item.svelte
src/lib/garmin-connect/: garmin-auth.service.ts  index.ts
src/lib/garmin-connect/common/: HttpClient.ts  ICryptoProvider.ts  IFileHandler.ts  ITokenStorage.ts
src/lib/garmin-connect/garmin/: GarminConnect.ts  UrlClass.ts
src/lib/garmin-connect/garmin/common/: DateUtils.ts  GpxUtils.ts
src/lib/garmin-connect/garmin/types/: activity.ts  calendar.ts  gear.ts  gpx.ts  index.ts  workout.ts
src/lib/garmin-connect/implementations/: FileTokenStorage.ts  TauriCryptoProvider.ts
src/lib/store/: app-store.svelte.ts  app-store.types.ts
src/lib/sync/: sync.service.ts
src/routes/: +page.svelte
