[package]
name = "fit-sync"
version = "0.1.0"
description = "Sync .fit files to Garmin and other targets"
authors = ["you"]
edition = "2021"

[lib]
name = "fit_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-http = "2.5.7"
notify = { git = "https://github.com/Dimfred/notify", branch = "main" }
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.3"
